# http-server

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: address_types.h.188C883A19F4C1B8.idx  host_resolver.h.61F2DC47340B7F48.idx  logging.h.1F10BCF29869E61A.idx  main.c.538AEAEE9B28777C.idx
b/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
configuration/: release.cfg
src/http-server/: CMakeLists.txt  main.c
src/http-server/configuration/configuration-handler/: configuration_handler.c  configuration_handler.h
src/http-server/configuration/configuration-values/: configuration_values.c  configuration_values.h
src/http-server/include/logging/: debug_logging.h  logging.h
src/http-server/include/types/: generic_types.h
src/http-server/services/connection-handler/: connection_handler.c  connection_handler.h
src/http-server/services/host-resolver/: host_resolver.c  host_resolver.h
src/http-server/services/listen-handler/: listen_handler.c  listen_handler.h
src/http-server/services/logging/: logging.h
src/http-server/services/orchestrator/: orchestrator.c  orchestrator.h
src/http-server/services/response-handler/: response_handler.c  response_handler.h
src/http-server/services/thread-handler/: thread_handler.c  thread_handler.h
src/http-server/types/address-types/: address_types.h
src/http-server/types/thread-types/: thread_types.h
src/http-server/utilities/error-handler/: error_handler.c  error_handler.h
src/http-server/utilities/host-configuration/: host_configuration.c  host_configuration.h
src/http-server/utilities/string-tools/: string_tools.c  string_tools.h
src/shared/services/host-resolver/: host_resolver.c  host_resolver.h
src/shared/types/address-types/: address_types.h
src/shared/utilities/string-tools/: string_tools.c  string_tools.h
src/types/: address_types.h
src/utilities/host-resolver/: host_resolver.c  host_resolver.h
